--- a/Frontend-Vuetify/src/styles/settings.scss
+++ b/Frontend-Vuetify/src/styles/settings.scss
@@ -5,6 +5,12 @@
  */
 
 // https://vuetifyjs.com/features/sass-variables/`
-// @use 'vuetify/settings' with (
-//   $color-pack: false
-// );
+@use 'vuetify/settings' with (
+   $container-max-widths: (
+      sm: 540px,
+      md: 720px,
+      lg: 960px,
+      xl: 1140px,
+      xxl: 1320px
+   )
+);
