First iteration bug fixing and code optimizations

--- a/Backend/Template/DeclinedConfirmation.html
+++ b/Backend/Template/DeclinedConfirmation.html
@@ -193,7 +193,7 @@
                                     text-align: center;
                                     padding-bottom: 25px;
                                   ">
-                                                                Sorry,Your Verification failed by Admin.
+                                                                We regret to inform you that your verification process has not been successful.
                                                             </td>
                                                         </tr>
 
