--- a/Backend/Template/confirmation.html
+++ b/Backend/Template/confirmation.html
@@ -193,7 +193,7 @@
                                     text-align: center;
                                     padding-bottom: 25px;
                                   ">
-                                                                Congratulations, You are successfully Verified by Admin.
+                                                                We are glad to inform you that your verification process has been successful.
                                                             </td>
                                                         </tr>
 
