--- a/Frontend-Vuetify/src/styles/settings.scss
+++ b/Frontend-Vuetify/src/styles/settings.scss
@@ -1,10 +1,3 @@
-/**
- * src/styles/settings.scss
- *
- * Configures SASS variables and Vuetify overwrites
- */
- 
-// https://vuetifyjs.com/features/sass-variables/`
 @use 'vuetify/settings' with (
    $container-max-widths: (
       sm: 540px,
@@ -21,7 +14,6 @@
 html{scroll-behavior: smooth;} 
 body{
    font-family: var(--Primaryfontfamily);
-   // background-color: #fafafb;
    color:var(--PrimarytextColor);
 }
 p{
@@ -31,15 +23,7 @@ p{
    line-height: 1.5;
    color:var(--SecondarytextColor);
 }
-// .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-//    --bs-gutter-x: 1.5rem;
-//    --bs-gutter-y: 0;
-//    width: 100%;
-//    padding-right: calc(var(--bs-gutter-x)* .5);
-//    padding-left: calc(var(--bs-gutter-x)* .5);
-//    margin-right: auto;
-//    margin-left: auto;
-// }
+
 .bg-ltgrey{
    background: #fafafb;
 }
@@ -251,23 +235,6 @@ body .main_header .navbar-nav .nav-item.dropdown .dropdown-menu{
 .left0 {
    left: 10px;
 }
- 
-// .SearchBox {
-//    position: relative;
-// }
- 
-// .SearchBox i {
-//    position: absolute;
-//    left: 10px;
-//    top: 6px;
-//    font-size: 16px;
-//    color: rgb(23, 26, 31);
-// }
- 
-// .SearchBox .form-control {
-//    padding-left: 30px;
-// }
- 
 
 .general_infoContent .descriptiontextarea{
    height:172px;
@@ -320,8 +287,6 @@ body .main_header .navbar-nav .nav-item.dropdown .dropdown-menu{
    user-select: none;
  }
  
- 
- 
  .checkbox_container input {
    position: absolute;
    opacity: 0;
@@ -340,9 +305,6 @@ body .main_header .navbar-nav .nav-item.dropdown .dropdown-menu{
    border-radius: 4px;
  }
  
-//  .checkbox_container:hover input ~ .checkmark {
-//    background-color: #ccc;
-//  }
  .checkbox_container input:checked ~ .checkmark {
    background-color: #00BDD6;
    border-color: #00BDD6;
@@ -428,33 +390,10 @@ body .main_header .navbar-nav .nav-item.dropdown .dropdown-menu{
    margin:0px!important;
    box-shadow: none !important;
 }
-// body .SearchBox_filter .btn{
-//    padding:6px 12px!important;
-// }
-// .SearchBox_filter{
-//    margin-bottom: 40px;
-//    gap:10px;
-// }
-// .SearchBox_filter .SearchBox{
-//    min-width: 30%;
-// }
- 
 
 .theme_table {
-   // border: 1px solid #ddd!important;
    margin-bottom: 0!important;
 }
- 
-// .theme_table.table th {
-//    background-color: #f2f2f2 !important;
-// }
- 
-// .theme_table.table th,
-// .theme_table.table td {
-//    border-color: #ddd!important;
-//    padding: .75rem;
-//    font-size: 14px;
-// }
 .now_wrap{
    white-space: nowrap;
 }
@@ -462,15 +401,12 @@ body .main_header .navbar-nav .nav-item.dropdown .dropdown-menu{
    gap:10px;
    display: flex;
 }
- 
- 
- 
+
 @media (min-width: 1400px) {
    .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
        max-width: 1320px!important;
    }
 }
- 
  
 @media only screen and (max-width:1199px){
   body .loginmain-bg .loginmain-form {
@@ -930,14 +866,7 @@ body .multiselect__option--highlight::after, body .multiselect__option--highligh
 .contact_infoBox ul {
    margin: 0;
 }
-// .amenities-wrapper .contact_infoBox ul {
-//    max-height: 120px;
-//    overflow-y: auto;
-//    display: flex;
-//    flex-wrap: wrap;
-//    gap: 3%;
-//    margin: 0;
-// }
+
 .amenities-wrapper .contact_infoBox ul li {
   width: auto;
 }
@@ -1030,15 +959,6 @@ body .multiselect__option--highlight::after, body .multiselect__option--highligh
    border: 1px solid #c1f1ff;
    color: #c1f1ff;
 }
-
-// .loginmain-form .login-left-content {
-//    max-width: 390px;
-//    margin: auto;
-//    width: 100%;
-//    display: flex;
-//    align-items: center;
-//    height: 100%;
-// }
 
 .loginmain-bg {
    background-size: cover;
@@ -1258,8 +1178,6 @@ body .multiselect__option--highlight::after, body .multiselect__option--highligh
    margin: auto;
    width: 100%;
    display: flex;
-   // align-items: center;
-   // height: 100%;
    flex-wrap: wrap;
 }
 
@@ -1782,7 +1700,7 @@ body .profile-form-inner .form-group {
    display: flex;
    justify-content: center;
    align-items: center;
-   height: 100px; /* Adjust based on your layout */
+   height: 100px; 
  }
  
  .spinner {
