a few frontend changes to improve mobile compability

--- a/Frontend-Vuetify/src/styles/settings.scss
+++ b/Frontend-Vuetify/src/styles/settings.scss
@@ -993,7 +993,7 @@ body .multiselect__option--highlight::after, body .multiselect__option--highligh
    width: 100%;
 }
 .auth-register form.form-border {
-   padding: 20px 15px 20px;
+   padding: 1% 1% 1%;
 }
 .register-wrapper .auth-card {
    max-width: 1000px;
