--- a/Backend/Template/DeclinedConfirmation.html
+++ b/Backend/Template/DeclinedConfirmation.html
@@ -13,8 +13,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="x-apple-disable-message-reformatting" />
     <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,700,700i"
-          rel="stylesheet" />
-    <title>Willkommen</title>
+          rel="stylesheet" />    
     <style type="text/css" media="all">
         sup {
             font-size: 100% !important;
@@ -193,7 +192,7 @@
                                     text-align: center;
                                     padding-bottom: 25px;
                                   ">
-                                                                Es tut uns leid, aber Deine Verifizierung wurde vom Admin abgelehnt.
+                                                                Es tut uns leid FirstName, aber Deine Verifizierung wurde vom Admin abgelehnt.
                                                             </td>
                                                         </tr>
 
