--- a/Backend/Template/confirmation.html
+++ b/Backend/Template/confirmation.html
@@ -14,7 +14,6 @@
     <meta name="x-apple-disable-message-reformatting" />
     <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,700,700i"
           rel="stylesheet" />
-    <title>Willkommen</title>
     <style type="text/css" media="all">
         sup {
             font-size: 100% !important;
@@ -193,7 +192,7 @@
                                     text-align: center;
                                     padding-bottom: 25px;
                                   ">
-                                                                Herzlichen Glückwunsch, Du wurdest erfolgreich vom Admin verifiziert!
+                                                                Herzlichen Glückwunsch FirstName, Du wurdest erfolgreich vom Admin verifiziert!
                                                             </td>
                                                         </tr>
 
