--- a/Frontend-Vuetify/src/styles/settings.scss
+++ b/Frontend-Vuetify/src/styles/settings.scss
@@ -11,6 +11,9 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.3.0/remixicon.css' );
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
+// Import UGH Design System Colors
+@import './colors.scss';
+
 html{scroll-behavior: smooth;} 
 body{
    font-family: var(--Primaryfontfamily);
